testsuite/tests/properties/invalid_node_builder/common.lkt
from lexer_example import foo_lexer
from test import Example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- list_rule
    list_rule <- Example("(" list+(list_item, ",") ")")
    list_item <- Literal(@Number)
}

class FooNode implements Node[FooNode] {
}

class Literal: FooNode implements TokenNode {
}

@abstract
class BaseExample: FooNode {
    @parse_field items: ASTList[Literal]
}
